examples/star-wars-demo/sw_l3_l4_l7_policy.yaml
# This file is adapted from the Cilium Star Wars Demo
# Original source: https://github.com/cilium/cilium/blob/1.17.3/examples/minikube/sw_l3_l4_l7_policy.yaml
# All credit for the policy examples belongs to the Cilium authors
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/v1/request-landing"
