examples/star-wars-demo/sw_l3_l4_policy.yaml
# This file is adapted from the Cilium Star Wars Demo
# Original source: https://github.com/cilium/cilium/blob/1.17.3/examples/minikube/sw_l3_l4_policy.yaml
# All credit for the policy examples belongs to the Cilium authors
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L3-L4 policy to restrict deathstar access to empire ships only"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
